corrections on overflow and scroll

--- a/src/App.sass
+++ b/src/App.sass
@@ -4,13 +4,14 @@
 
   main
     width: 100vw
+    display: flex
 
     .project-description
       float: left
-      width: 17rem
+      width: 17vw
       display: grid
       padding-left: 1rem
-      position: absolute
+      // position: fixed
       top: 1rem
       text-align: right
       grid-row-gap: 2rem
